--- a/report/sections/imp_dgs.tex
+++ b/report/sections/imp_dgs.tex
@@ -3,16 +3,254 @@
 %     - [ ] Funcionalidades (API)
 %     - [ ] JSON específico
 
-Para maximizar a modularidade do sistema, a implementação de cada um dos grupos de dados foi escrita na sua própria \textit{script} que é depois importada pelo \textit{mDL}. Estes partilham um conjunto de funcionalidades que permitem um acesso rápido e eficiente aos dados dos respetivos DG's. Entre estes, encontram-se:
+% Excecionalmente, o ficheiro \texttt{EF\_GroupAccess} é responsável pelo estabelecimento e gestão de permissões de acesso dos grupos de dados. Por fim, o ficheiro \texttt{EF\_SOD} é responsável por guardar a \textit{hash} coletiva do sistema, bem como armazenar os seus certificados e assinaturas digitais.
 
-\begin{itemize}
-    \item Leitura e escrita de ficheiros nos quais é guardada informação dos grupos de dados codificada com ASN1.
-    \item Codificação de dados em ASN1.
-    \item Geração de um dicionário de dados com toda a informação de um dado grupo.
-    \item Geração de um valor de \textit{hash} sobre os valores de um dado grupo de dados.
-\end{itemize}
+% Para facilitar o acesso aos dados, foi desenvolvido também uma estrutura JSON para cada um deles que delimita a ordem de entrada e tipo de cada um dos campos para o respetivo DG. Para cada campo, é definida a sua \textit{tag} (se relevante), o seu comprimento em \textit{bytes} e quaisquer limitações de \textit{input} a qual esteja sujeito.
 
-Excecionalmente, o ficheiro \texttt{EF\_GroupAccess} é responsável pelo estabelecimento e gestão de permissões de acesso dos grupos de dados. Por fim, o ficheiro \texttt{EF\_SOD} é responsável por guardar a \textit{hash} coletiva do sistema, bem como armazenar os seus certificados e assinaturas digitais.
+Para cada um dos ficheiros que compõe a estrutura de dados, foi implementada uma \textit{script} com um conjunto de funcionalidades que as permitem criar e gerir os respetivos ficheiros. Estes são depois acedidos pelo \textit{mDL} através da sua API, da qual as \textit{scripts} partilham a capacidade de carregar e escrever os dados do respetivo grupo de dados em ficheiro:
 
-Para facilitar o acesso aos dados, foi desenvolvido também uma estrutura JSON para cada um deles que delimita a ordem de entrada e tipo de cada um dos campos para o respetivo DG. Para cada campo, é definida a sua \textit{tag} (se relevante), o seu comprimento em \textit{bytes} e quaisquer limitações de \textit{input} a qual esteja sujeito.
+\begin{lstlisting}[language=Python, caption=Exemplos de funções de inicialização\, escrita e carregamento de dados no DG1]
+    def __init__(self, data):
+    """
+    Parâmetros
+    ----------
+    data : dict
+        dicionário com os nomes das variáveis de instância como chaves
+        e respetivo conteúdo como valor
+    """
+    if isinstance(data, str):
+        data = self.load(data)
+    self.family_name = data['family_name']
+    self.name = data['name']
+    self.date_of_birth = data['date_of_birth']
+    self.date_of_issue = data['date_of_issue']
+    self.date_of_expiry = data['date_of_expiry']
+    self.issuing_country = data['issuing_country']
+    self.issuing_authority = data['issuing_authority']
+    self.license_number = data['license_number']
+    self.number_of_entries = data['number_of_entries']
+    self.categories_of_vehicles = data['categories_of_vehicles']
+
+    def save(self, filename):
+        """Armazena os dados do DG1 num ficheiro, codificados com ASN1.
+
+        Parâmetros:
+        -----------
+        filename : str
+            nome do ficheiro onde se pretende armazenar os dados
+        """
+        with open(filename, 'w+') as fp:
+            hex_data = asn1.encode(self, './data_groups/configs/dg1.json')
+            fp.write(hex_data)
+
+    def load(self, filename):
+        """ Carrega os dados do DG1 de um ficheiro, codificado com ASN1.
+
+        Parâmetros
+        ----------
+        filename : str
+            nome do ficheiro a partir do qual se pretende obter os dados
+
+        Retorna
+        -------
+        data : dict
+            dicionário com os nomes das variáveis de instância como chaves
+            e respetivo conteúdo como valor
+        """
+        with open(filename, 'r') as fp:
+            data = asn1.decode(fp.read(), './data_groups/configs/dg1.json')
+        return data
+\end{lstlisting}
+
+Tanto o carregamento como a escrita destes é executada com a ajuda de um ficheiro JSON que permite alterações à estrutura da implementação sem que haja alterações no código em si. Cada um dos DG's tem o seu próprio JSON no qual são guardadas os seus campos, bem como os respetivos comprimentos em \textit{bytes} e as suas \textit{tags} e é convertido de e para o formato ASN1 consoante a sua leitura e escrita, respetivamente.
+
+\subsection{Data Groups 1, 6 e 10}
+
+Estes DG's são responsáveis por armazenar os dados do titular mDL, bem como os do próprio título mDL. Estes contêm um conjunto próprio de funções que as permitem gerar dicionários de dados com a respetiva informação mDL bem como métodos dedicados à sua codificação no formato ASN1 e o seu \textit{hashing} de acordo com um algoritmo da sua escolha:
+
+\begin{lstlisting}[caption=API comum aos DG's exemplificada pelo DG1, language=Python]
+    def encode(self):
+        """Codificados os dados do DG1 com ASN1.
+
+        Retorna:
+        --------
+        hex_data : str
+            dados do DG1 codificados em hexadecimal
+        """
+        return asn1.encode(self, './data_groups/configs/dg1.json')
+
+    def __str__(self):
+    """ Retorna uma string que apresenta os dados do DG1
+
+    Retorna
+    -------
+    data : str
+        string com os dados do DG1
+    """
+    return ';'.join([self.family_name,\
+            self.name,\
+            self.date_of_birth,\
+            self.date_of_issue,\
+            self.date_of_expiry,\
+            self.issuing_country,\
+            self.issuing_authority,\
+            self.license_number,\
+            str(self.number_of_entries),\
+            str(self.categories_of_vehicles)])
+
+            def get_data(self):
+            """ Devolve os dados associados.
+    
+            Retorna
+            -------
+            data : dict
+                dicionário com os nomes das variáveis de instância como
+                chaves e respetivo conteúdo como valor
+            """
+            data = {}
+            data['family_name'] = self.family_name
+            data['name'] = self.name
+            data['date_of_birth'] = self.date_of_birth
+            data['date_of_issue'] = self.date_of_issue
+            data['date_of_expiry'] = self.date_of_expiry
+            data['issuing_country'] = self.issuing_country
+            data['issuing_authority'] = self.issuing_authority
+            data['license_number'] = self.license_number
+            data['number_of_entries'] = self.number_of_entries
+            data['categories_of_vehicles'] = self.categories_of_vehicles
+            return data
+    
+        def hash(self, oid):
+            """ Calcula o valor de hash dos dados do DG1.
+    
+            Retorna
+            -------
+            digest : str
+                valor de hash
+            """
+            data = self.family_name + self.name +\
+                self.date_of_birth + self.date_of_issue +\
+                self.date_of_expiry + self.issuing_country +\
+                self.issuing_authority + self.license_number +\
+                "".join(self.categories_of_vehicles) +\
+                str(self.number_of_entries)
+            if oid == 'id-sha1':
+                digest = hashes.Hash(hashes.SHA1(), backend=default_backend())
+                digest.update(data.encode())
+                return digest.finalize()
+            elif oid == 'id-sha224':
+                digest = hashes.Hash(hashes.SHA224(), backend=default_backend())
+                digest.update(data.encode())
+                return digest.finalize()
+            elif oid == 'id-sha256':
+                digest = hashes.Hash(hashes.SHA256(), backend=default_backend())
+                digest.update(data.encode())
+                return digest.finalize()
+            elif oid == 'id-sha384':
+                digest = hashes.Hash(hashes.SHA384(), backend=default_backend())
+                digest.update(data.encode())
+                return digest.finalize()
+            elif oid == 'id-sha512':
+                digest = hashes.Hash(hashes.SHA512(), backend=default_backend())
+                digest.update(data.encode())
+                return digest.finalize()
+            else:
+                print('ERROR: Hash algorithm not implemented.')
+                sys.exit(1)
+\end{lstlisting}
+
+\subsubsection{Data Group 1}
+
+Este DG é responsável por armazenar os dados do titular mDL, bem como alguma informação básica do próprio título mDL. Cada um destes contém um conjunto de variáveis de instância correspondentes aos respetivos dados explicitados na estrutura de dados:
+
+\begin{lstlisting}[caption=Instanciação das variáveis do DG1, language=Python]
+    self.family_name = data['family_name']
+    self.name = data['name']
+    self.date_of_birth = data['date_of_birth']
+    self.date_of_issue = data['date_of_issue']
+    self.date_of_expiry = data['date_of_expiry']
+    self.issuing_country = data['issuing_country']
+    self.issuing_authority = data['issuing_authority']
+    self.license_number = data['license_number']
+    self.number_of_entries = data['number_of_entries']
+    self.categories_of_vehicles = data['categories_of_vehicles']
+\end{lstlisting}
+
+\subsubsection{Data Group 6}
+
+Este DG contém um conjunto de dados biométricos relativos ao titular, em particular, a sua foto. Para permitir uma melhor gestão deste ficheiro, foi criada uma classe auxiliar \texttt{BiometricTemplate} que guarda cada um dos dados biométricos do DG:
+
+\begin{lstlisting}[caption=Instanciação dos dados do DG6, recorrendo à classe auxiliar, language=Python]
+class BiometricTemplate:
+    def __init__(self, version, bdb_owner, bdb_type, bdb):
+        self.version = version if version is not None else '0101'
+        self.bdb_owner = bdb_owner
+        self.bdb_type = bdb_type
+        self.bdb = bdb
+    
+    def __str__(self):
+        return '(' + ', '.join([str(self.version), str(self.bdb_owner), str(self.bdb_type), str(self.bdb)[:20] + '...']) + ')'
+
+
+class DG6:
+    """
+    CLasse utilizada para representar um grupo de dados 6.
+    
+    Atributos
+    ---------
+    
+    Métodos
+    -------
+    """
+    def __init__(self, data):
+        """ Construtor da classe DG6.
+
+        Parâmetros
+        ----------
+        data : list
+            lista de dicionários que representam biometric templates
+        """
+        if isinstance(data, str):
+            data = self.load(data)
+        self.biometric_templates = []
+        
+        for template in data['biometric_templates']:
+            self.biometric_templates.append(
+                BiometricTemplate(
+                    template['version'],
+                    template['bdb_owner'],
+                    template['bdb_type'],
+                    template['bdb']
+                )
+            )
+        self.number_of_entries = data['number_of_entries']
+\end{lstlisting}
+
+
+\subsubsection{Data Group 10}
+
+Este grupo de dados é responsável por armazenar os dados relativos à gestão do mDL, incluindo a sua data de validade e as datas do último e próximo \textit{updates}.
+
+\begin{lstlisting}[caption=Instanciação dos dados do DG10, language=Python]
+    self.version = data['version']
+    self.last_update = data['last_update']
+    self.expiration_date = data['expiration_date']
+    self.next_update = data['next_update']
+    self.management_info = data['management_info']
+\end{lstlisting}
+
+
+\subsection{EF_COM}
+
+O ficheiro elementar COM é responsável por armazenar as \textit{tags} relativas aos grupos de dados presentes numa dada implementação do mDL.
+
+\begin{lstlisting}[caption=Instanciação de variáveis no EF.COM, language=Python]
+    self.version = data['version']
+    self.tag_list = data['tag_list']
+\end{lstlisting}
+
+Como esta funciona puramente como um meio rápido de averiguar os dados disponíveis ao mDL, este contém apenas as funções de API básica, bem como uma função de exibição de dados semelhante aos grupos de dados anteriormente expostos.
+
+
+\subsection{EF_GroupAccess}
 
